<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <com.beardedhen.androidbootstrap.FontAwesomeText
        android:id="@+id/lblTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/bbutton_primary"
        android:textSize="32sp"
        fontawesometext:fa_icon="fa-cog" />

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="Consultar producto" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/txtbuscar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:hint="@string/consultar_producto"
        android:inputType="number"
        bootstrapbutton:be_roundedCorners="true"
        bootstrapbutton:be_state="warning" >
    </com.beardedhen.androidbootstrap.BootstrapEditText>

    <LinearLayout
        android:id="@+id/panel_principal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/section_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:orientation="vertical"
        android:visibility="gone" >

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/nombre_producto"
            bootstrapbutton:be_roundedCorners="true" >
        </com.beardedhen.androidbootstrap.BootstrapEditText>

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/txtTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/tipo_prodcuto"
            bootstrapbutton:be_roundedCorners="true" >
        </com.beardedhen.androidbootstrap.BootstrapEditText>

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/txtColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/color"
            bootstrapbutton:be_roundedCorners="true" >
        </com.beardedhen.androidbootstrap.BootstrapEditText>

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/txtMarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/marca"
            bootstrapbutton:be_roundedCorners="true" >
        </com.beardedhen.androidbootstrap.BootstrapEditText>

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/txtCantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/cantidad"
            android:inputType="number"
            bootstrapbutton:be_roundedCorners="true" >
        </com.beardedhen.androidbootstrap.BootstrapEditText>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:id="@+id/panel_boton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btnguardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/buscar"
            bootstrapbutton:bb_icon_right="fa-eye"
            bootstrapbutton:bb_roundedCorners="true"
            bootstrapbutton:bb_type="success" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btnActualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/actualizarr"
            bootstrapbutton:bb_icon_right="fa-pencil"
            bootstrapbutton:bb_roundedCorners="true"
            bootstrapbutton:bb_type="warning" />
        
         <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btnBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/borrar"
            bootstrapbutton:bb_icon_right="fa-warning"
            bootstrapbutton:bb_roundedCorners="true"
            bootstrapbutton:bb_type="danger" />
    </LinearLayout>

</RelativeLayout>